--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "stoned420-website",
-  "homepage": "https://ultranoob3.github.io/stoned420-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,10 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build" 
-
+    "preview": "vite preview"
   },
   "dependencies": {
     "@noble/secp256k1": "^2.2.3",
@@ -32,7 +28,6 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
